--- a/index.html
+++ b/index.html
@@ -46,7 +46,67 @@
 <h2>Publications</h2>
 
 <ul>
-	<li> Villalobos, K., <b>Vadillo, J.</b>, Diez, B., Calvo, B., & Illarramendi, A. (2018, December). <i>I4TSPS: a Visual-Interactive Web System for Industrial Time-Series Pre-processing. </i> In 2018 IEEE International Conference on Big Data (Big Data) (pp. 2012-2018). IEEE.
+	<li><b>Vadillo, J.</b> and Santana, R. "Universal adversarial examples in speech command classification." <i>arXiv preprint arXiv:1911.10182 </i> (2019).
+	</li>
+	<br>
+	<li> Villalobos, K., <b>Vadillo, J.</b>, Diez, B., Calvo, B., & Illarramendi, A. "I4TSPS: a Visual-Interactive Web System for Industrial Time-Series Pre-processing." <i> In 2018 IEEE International Conference on Big Data (Big Data).</i> pp. 2012-2018. IEEE. (2018, December)
+	</li>
+</ul>
+
+
+
+
+
+<h2>Education</h2>
+
+<ul>
+	<li> M. Sc. - Computational Engineering and Intelligent Systems	
+			<ul>
+				<li> Average grade: 9.81</li>
+				<li> Final project passed with honours </li>
+				<li> 3 subjects passed with honours </li>
+			</ul>
+	</li>
+	<br>
+	<li> Bachelor's Degree in Computer Sciences 
+			<ul>
+				<li> Extraordinary Award to the Best Academic Record</li>
+				<li> Average grade: 9.52</li>
+				<li> Final project passed with honours </li>
+				<li> 25 subjects passed with honours </li>
+			</ul>
+	</li>
+</ul>
+
+
+
+
+
+<h2>Other courses</h2>
+
+<ul>
+	<li> 3rd ACM Europe Summer School on Data Science - Athens (Greece)	</li>
+</ul>
+
+
+
+
+
+<h2>Grants and Awards</h2>
+
+<ul>
+	<li> Special Award to the Best Academic Record - Bachelor's Degree on Computer Sciences </li>
+	<br>
+	<li> ACM International Collegiate Programming Contest (ICPC)
+		<ul>
+			<li> Honorable mentions in the South Western Europe Regional Contest (SWERC) in 2016 and 2017.</li>
+		</ul>
+	</li>
+	<br>
+	<li> Granted collaboration with a university research group - Ikasiker Scholarship Plan 
+		<ul>
+			<li> Interoperable Databases Group - University of the Basque Country (UPV/EHU) </li>
+		</ul>
 	</li>
 </ul>
 
