Audibility web included

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 <h2>Other courses</h2>
 
 <ul>
-	<li> 3rd ACM Europe Summer School on Data Science - Athens (Greece)	</li>
+	<li> 3rd ACM Europe Summer School on Data Science - Athens (Greece). </li>
 </ul>
 
 
