Minor text corrections in the distortion web

--- a/adversarial_distortion/UniversalPerturbations.html
+++ b/adversarial_distortion/UniversalPerturbations.html
@@ -470,13 +470,13 @@ In particular, we discovered that the perturbation is more susceptible to be det
 
 
 <p style="font-size:170%;"> Part 3 - Intensity of the original signal</p>
-<p> We also discovered that the perception of a perturbation changes according to the intensity of the audio signal in which it is applied. For this reason, we decided to classify the audios considering three levels of intensity: low, medium and high, according to the dB mean distortion metric:
+<p> We also discovered that the perception of a perturbation changes according to the intensity of the audio signal in which it is applied. For this reason, we decided to classify the audios considering three levels of intensity: low, medium and high, according to the <img src="http://latex.codecogs.com/gif.latex?\hspace{1.5cm}dB_{mean}" border="0"/> metric:
 <ul>
 	<li><b>Low intensity level:</b> &emsp;&nbsp; audios with a mean distortion below 50dB.</li>
 	<li><b>Medium intensity level:</b> audios with a mean distortion between 50dB and 70dB.</li>
 	<li><b>High intensity level:</b> &emsp;&nbsp; audios with a mean distortion above 70dB.</li>
 </ul>
-In the following examples we have added the same perturbation to three original audios with different levels of intensity, to illustrate the effect on the perception of the distortion.
+In the following examples we have added the same perturbation to three original audios with different levels of intensity, to illustrate its effect on the perception of the distortion.
 
 
 </p>
