Updated personal website

--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
 <hr class="style13">
 <br>
 
-<p style="font-size:120%;">I received my B.S. degree in Computer Science from the University of the Basque Country, Spain, in 2018. I received my M.Sc. degree at the same university, in 2019. My current research interests comprise the vulnerabilities of deep learning models in adversarial scenarios and the application of such technologies in both industry 4.0 scenarios and biomedical domains.</p>
+<p style="font-size:120%;">
+I received a B.S. degree in Computer Science from the University of the Basque Country UPV/EHU, Spain, in 2018. I received an M.Sc. degree at the same university, in 2019. I am currently pursuing a Ph.D. degree at the University of the Basque Country UPV/EHU, Spain, under the supervision of Dr. Roberto Santana and Prof. Jose A. Lozano in the field of adversarial machine learning. My current research interests comprise the vulnerabilities of deep learning models in adversarial scenarios and the application of such technologies in the audio domain.
+</p>
 
 
 
@@ -46,6 +48,21 @@
 <h2>Publications</h2>
 
 <ul>
+	<li><b>Vadillo, J.</b>, Santana, R. and Jose A. Lozano "When and How to Fool Explainable Models (and Humans) with Adversarial Examples." <i>arXiv preprint arXiv:2107.01943. </i> (2021).
+	</li>
+	<br>
+	<li><b>Vadillo, J.</b>, Santana, R. and Jose A. Lozano "Analysis of Dominant Classes in Universal Adversarial Perturbations." <i>arXiv preprint arXiv:2012.14352. </i> (2020).
+	</li>
+	<br>
+	<li><b>Vadillo, J.</b>, Santana, R. and Jose A. Lozano "Exploring Gaps in DeepFool in Search of More Effective Adversarial Perturbations." <i>In Machine Learning, Optimization, and Data Science (LOD). pp. 215-227. Lecture Notes in Computer Science, vol 12566, Springer, Cham. </i> (2020).
+	</li>
+	<br>
+	<li><b>Vadillo, J.</b>, Santana, R. and Jose A. Lozano "Extending Adversarial Attacks to Produce Adversarial Class Probability Distributions." <i>arXiv preprint arXiv:2004.06383. </i> (2020).
+	</li>
+	<br>
+	<li><b>Vadillo, J.</b> and Santana, R. "On the human evaluation of audio adversarial examples." <i>arXiv preprint arXiv:2001.08444. </i> (2020).
+	</li>
+	<br>
 	<li><b>Vadillo, J.</b> and Santana, R. "Universal adversarial examples in speech command classification." <i>arXiv preprint arXiv:1911.10182 </i> (2019).
 	</li>
 	<br>
@@ -64,7 +81,7 @@
 			<ul>
 				<li> Average grade: 9.81</li>
 				<li> Final project passed with honours </li>
-				<li> 3 subjects passed with honours </li>
+				<li> 3 subjects passed with honours (out of 10) </li>
 			</ul>
 	</li>
 	<br>
@@ -73,7 +90,7 @@
 				<li> Extraordinary Award to the Best Academic Record</li>
 				<li> Average grade: 9.52</li>
 				<li> Final project passed with honours </li>
-				<li> 25 subjects passed with honours </li>
+				<li> 24 subjects passed with honours (out of 36) </li>
 			</ul>
 	</li>
 </ul>
@@ -110,15 +127,7 @@
 	</li>
 </ul>
 
+
 </div>
-
-
-
-
-
-
-
-
-
 
 </body></html>
