--- a/index.html
+++ b/index.html
@@ -45,25 +45,29 @@ I received a B.S. degree in Computer Science from the University of the Basque C
 <hr class="style13">
 <br>
 
-<h2>Publications</h2>
+<h2>Publications (<a href="https://scholar.google.com/citations?&user=sViKhEsAAAAJ">Google Scholar</a>)</h2>
 
 <ul>
-	<li><b>Vadillo, J.</b>, Santana, R. and Jose A. Lozano "When and How to Fool Explainable Models (and Humans) with Adversarial Examples." <i>arXiv preprint arXiv:2107.01943. </i> (2021).
+	<li>Garciarena, U., <b>Vadillo, J.</b>, Mendiburu, A. and Santana, R. "Adversarial Perturbations for Evolutionary Optimization." <i>In Machine Learning, Optimization, and Data Science (LOD). Lecture Notes in Computer Science, 13164. </i> pp. 408-422. Springer, Cham. (2022). DOI: <a href="https://doi.org/10.1007/978-3-030-95470-3_31">10.1007/978-3-030-95470-3_31</a>.
 	</li>
 	<br>
-	<li><b>Vadillo, J.</b>, Santana, R. and Jose A. Lozano "Analysis of Dominant Classes in Universal Adversarial Perturbations." <i>arXiv preprint arXiv:2012.14352. </i> (2020).
+	<li><b>Vadillo, J.</b>, Santana, R. and Lozano, J.A. "Analysis of Dominant Classes in Universal Adversarial Perturbations." <i>Knowledge-Based Systems, 236. </i> pp. 107719. Elsevier. (2022). DOI: <a href="https://doi.org/10.1016/j.knosys.2021.107719">10.1016/j.knosys.2021.107719</a>.
 	</li>
 	<br>
-	<li><b>Vadillo, J.</b>, Santana, R. and Jose A. Lozano "Exploring Gaps in DeepFool in Search of More Effective Adversarial Perturbations." <i>In Machine Learning, Optimization, and Data Science (LOD). pp. 215-227. Lecture Notes in Computer Science, vol 12566, Springer, Cham. </i> (2020).
+	<li><b>Vadillo, J.</b> and Santana, R. "On the Human Evaluation of Audio Adversarial Examples." <i>Computers & Security, 112.</i> pp. 102495. Elsevier. (2022). DOI: <a href="https://doi.org/10.1016/j.cose.2021.102495">10.1016/j.cose.2021.102495</a>.
 	</li>
 	<br>
-	<li><b>Vadillo, J.</b>, Santana, R. and Jose A. Lozano "Extending Adversarial Attacks to Produce Adversarial Class Probability Distributions." <i>arXiv preprint arXiv:2004.06383. </i> (2020).
+	<li><b>Vadillo, J.</b>, Santana, R. and Lozano, J.A. "When and How to Fool Explainable Models (and Humans) with Adversarial Examples." <i>arXiv preprint arXiv:2107.01943. </i> (2021).
 	</li>
 	<br>
-	<li><b>Vadillo, J.</b> and Santana, R. "On the human evaluation of audio adversarial examples." <i>arXiv preprint arXiv:2001.08444. </i> (2020).
+	<li><b>Vadillo, J.</b> and Santana, R. "Universal Adversarial Examples in Speech Command Classification." 
+	<i>In Proceedings of the XIX Conference of the Spanish Association for Artificial Intelligence (CAEPIA).</i> pp. 642-647 (2021). 
 	</li>
 	<br>
-	<li><b>Vadillo, J.</b> and Santana, R. "Universal adversarial examples in speech command classification." <i>arXiv preprint arXiv:1911.10182 </i> (2019).
+	<li><b>Vadillo, J.</b>, Santana, R. and Lozano, J.A. "Exploring Gaps in DeepFool in Search of More Effective Adversarial Perturbations." <i>In Machine Learning, Optimization, and Data Science (LOD). Lecture Notes in Computer Science, 12566. </i> pp. 215-227. Springer, Cham. (2020). DOI: <a href="https://doi.org/10.1007/978-3-030-64580-9_18">10.1007/978-3-030-64580-9_18</a>.
+	</li>
+	<br>
+	<li><b>Vadillo, J.</b>, Santana, R. and Lozano, J.A. "Extending Adversarial Attacks to Produce Adversarial Class Probability Distributions." <i>arXiv preprint arXiv:2004.06383. </i> (2020).
 	</li>
 	<br>
 	<li> Villalobos, K., <b>Vadillo, J.</b>, Diez, B., Calvo, B., & Illarramendi, A. "I4TSPS: a Visual-Interactive Web System for Industrial Time-Series Pre-processing." <i> In 2018 IEEE International Conference on Big Data (Big Data).</i> pp. 2012-2018. IEEE. (2018, December)
