--- a/acpd/AudioSamples.html
+++ b/acpd/AudioSamples.html
@@ -346,6 +346,13 @@ function change_table() {
 <h3>Jon Vadillo, Roberto Santana and Jose A. Lozano</h3>
 
 
+Click an icon from the table below to reproduce the corresponding audio.
+<br>
+<br>
+The rows of the table indicate the source class of the audio, and the columns the target class.
+<br>
+<br>
+
 <img src="img/icon_1_2.png" alt="Icon description" height="80">
 <br>
 <br>
