--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@ I received a B.S. degree in Computer Science from the University of the Basque C
 <h2>Publications (<a href="https://scholar.google.com/citations?&user=sViKhEsAAAAJ">Google Scholar</a>)</h2>
 
 <ul>
-	<li>Garciarena, U., <b>Vadillo, J.</b>, Mendiburu, A. and Santana, R. "Adversarial Perturbations for Evolutionary Optimization." <i>In Machine Learning, Optimization, and Data Science (LOD). Lecture Notes in Computer Science, 13164. </i> pp. 408-422. Springer, Cham. (2022). DOI: <a href="https://doi.org/10.1007/978-3-030-95470-3_31">10.1007/978-3-030-95470-3_31</a>.
-	</li>
-	<br>
 	<li><b>Vadillo, J.</b>, Santana, R. and Lozano, J.A. "Analysis of Dominant Classes in Universal Adversarial Perturbations." <i>Knowledge-Based Systems, 236. </i> pp. 107719. Elsevier. (2022). DOI: <a href="https://doi.org/10.1016/j.knosys.2021.107719">10.1016/j.knosys.2021.107719</a>.
 	</li>
 	<br>
 	<li><b>Vadillo, J.</b> and Santana, R. "On the Human Evaluation of Audio Adversarial Examples." <i>Computers & Security, 112.</i> pp. 102495. Elsevier. (2022). DOI: <a href="https://doi.org/10.1016/j.cose.2021.102495">10.1016/j.cose.2021.102495</a>.
+	</li>
+	<br>
+	<li>Garciarena, U., <b>Vadillo, J.</b>, Mendiburu, A. and Santana, R. "Adversarial Perturbations for Evolutionary Optimization." <i>In Machine Learning, Optimization, and Data Science (LOD). Lecture Notes in Computer Science, 13164. </i> pp. 408-422. Springer, Cham. (2022). DOI: <a href="https://doi.org/10.1007/978-3-030-95470-3_31">10.1007/978-3-030-95470-3_31</a>.
 	</li>
 	<br>
 	<li><b>Vadillo, J.</b>, Santana, R. and Lozano, J.A. "When and How to Fool Explainable Models (and Humans) with Adversarial Examples." <i>arXiv preprint arXiv:2107.01943. </i> (2021).
@@ -116,6 +116,13 @@ I received a B.S. degree in Computer Science from the University of the Basque C
 <h2>Grants and Awards</h2>
 
 <ul>
+	<li> Award to the Best Ph. D. Project</li>
+		<ul>
+			<li> 
+			Doctoral Consortium of the XIX Conference of the Spanish Association for Artificial Intelligence (CAEPIA 20/21).
+			</li>
+		</ul>
+	<br>
 	<li> Special Award to the Best Academic Record - Bachelor's Degree on Computer Sciences </li>
 	<br>
 	<li> ACM International Collegiate Programming Contest (ICPC)
@@ -131,6 +138,16 @@ I received a B.S. degree in Computer Science from the University of the Basque C
 	</li>
 </ul>
 
+
+<h2>Dissemination</h2>
+
+<ul>
+	<li><b>Vadillo, J.</b>, Santana, R. and Lozano, J.A. <a href="https://sinews.siam.org/Details-Page/do-you-trust-your-speech-recognition-system">Do You Trust Your Speech Recognition System? Fooling Deep Learning with (Inaudible) Audio Perturbations.</a> SIAM News. (2022).
+	</li>
+	<br>
+	<li>Rayne, E. <a href="https://www.syfy.com/syfy-wire/robots-can-be-wrong-ai-is-fooled-by-perturbations">Even Robots Can Be Fooled, but They're Getting Smarter.</a> SYFY Wire. (2022).
+	</li>
+</ul>
 
 </div>
 
