--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <br>
 
 <p style="font-size:120%;">
-I received a B.S. degree in Computer Science from the University of the Basque Country UPV/EHU, Spain, in 2018. I received an M.Sc. degree at the same university, in 2019. I am currently pursuing a Ph.D. degree at the University of the Basque Country UPV/EHU, Spain, under the supervision of Dr. Roberto Santana and Prof. Jose A. Lozano in the field of adversarial machine learning. My current research interests comprise the vulnerabilities of deep learning models in adversarial scenarios and the application of such technologies in the audio domain.
+I received a B.S. degree in Computer Science from the University of the Basque Country UPV/EHU (Spain) in 2018, and a M.Sc. degree at the same university in 2019. In 2023, I obtained a Ph.D. degree at the University of the Basque Country UPV/EHU, Spain, under the supervision of Dr. Roberto Santana and Prof. Jose A. Lozano in the field of adversarial machine learning. My current research interests comprise the vulnerabilities of deep learning models in adversarial scenarios, with particular attention to the implications of adversarial examples in explainable models.
 </p>
 
 
@@ -48,6 +48,9 @@ I received a B.S. degree in Computer Science from the University of the Basque C
 <h2>Publications (<a href="https://scholar.google.com/citations?&user=sViKhEsAAAAJ">Google Scholar</a>)</h2>
 
 <ul>
+	<li><b>Vadillo, J.</b>, Santana, R. and Lozano, J.A. "Extending Adversarial Attacks to Produce Adversarial Class Probability Distributions." <i>Journal of Machine Learning Research, 24(15).</i> pp. 1-42. (2023).
+	</li>
+	<br>
 	<li><b>Vadillo, J.</b>, Santana, R. and Lozano, J.A. "Analysis of Dominant Classes in Universal Adversarial Perturbations." <i>Knowledge-Based Systems, 236. </i> pp. 107719. Elsevier. (2022). DOI: <a href="https://doi.org/10.1016/j.knosys.2021.107719">10.1016/j.knosys.2021.107719</a>.
 	</li>
 	<br>
@@ -67,10 +70,7 @@ I received a B.S. degree in Computer Science from the University of the Basque C
 	<li><b>Vadillo, J.</b>, Santana, R. and Lozano, J.A. "Exploring Gaps in DeepFool in Search of More Effective Adversarial Perturbations." <i>In Machine Learning, Optimization, and Data Science (LOD). Lecture Notes in Computer Science, 12566. </i> pp. 215-227. Springer, Cham. (2020). DOI: <a href="https://doi.org/10.1007/978-3-030-64580-9_18">10.1007/978-3-030-64580-9_18</a>.
 	</li>
 	<br>
-	<li><b>Vadillo, J.</b>, Santana, R. and Lozano, J.A. "Extending Adversarial Attacks to Produce Adversarial Class Probability Distributions." <i>arXiv preprint arXiv:2004.06383. </i> (2020).
-	</li>
-	<br>
-	<li> Villalobos, K., <b>Vadillo, J.</b>, Diez, B., Calvo, B., & Illarramendi, A. "I4TSPS: a Visual-Interactive Web System for Industrial Time-Series Pre-processing." <i> In 2018 IEEE International Conference on Big Data (Big Data).</i> pp. 2012-2018. IEEE. (2018, December)
+	<li> Villalobos, K., <b>Vadillo, J.</b>, Diez, B., Calvo, B., & Illarramendi, A. "I4TSPS: a Visual-Interactive Web System for Industrial Time-Series Pre-processing." <i> In 2018 IEEE International Conference on Big Data (Big Data).</i> pp. 2012-2018. IEEE. (2018). DOI: <a href="https://doi.org/10.1109/BigData.2018.8621887">10.1109/BigData.2018.8621887</a>.
 	</li>
 </ul>
 
