--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <br>
 
 <p style="font-size:120%;">
-I received a B.S. degree in Computer Science from the University of the Basque Country UPV/EHU (Spain) in 2018, and a M.Sc. degree at the same university in 2019. In 2023, I obtained a Ph.D. degree at the University of the Basque Country UPV/EHU, Spain, under the supervision of Dr. Roberto Santana and Prof. Jose A. Lozano in the field of adversarial machine learning. My current research interests comprise the vulnerabilities of deep learning models in adversarial scenarios, with particular attention to the implications of adversarial examples in explainable models.
+I received a B.S. degree in Computer Science from the University of the Basque Country UPV/EHU (Spain) in 2018, and a M.Sc. degree at the same university in 2019. In 2023, I obtained a Ph.D. degree at the University of the Basque Country UPV/EHU, Spain, under the supervision of Dr. Roberto Santana and Prof. Jose A. Lozano in the field of adversarial machine learning. My current research interests comprise the vulnerabilities of deep learning models in adversarial scenarios, with particular attention to the audio domain and to the implications of adversarial examples in explainable models.
 </p>
 
 
