Update publications and style

--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
 	
 	h1 { font-family: Helvetica;} 
 
+	a {
+		/* color: #6f6f6f; */
+		color: #1b4f8a;
+	}
+
 </style>
 </head>
 
@@ -36,7 +41,15 @@
 <br>
 
 <p style="font-size:120%;">
-I received a B.S. degree in Computer Science from the University of the Basque Country UPV/EHU (Spain) in 2018, and a M.Sc. degree at the same university in 2019. In 2023, I obtained a Ph.D. degree at the University of the Basque Country UPV/EHU, Spain, under the supervision of Dr. Roberto Santana and Prof. Jose A. Lozano in the field of adversarial machine learning. My current research interests comprise the vulnerabilities of deep learning models in adversarial scenarios, with particular attention to the audio domain and to the implications of adversarial examples in explainable models.
+I received a B.S. degree in Computer Science from the University of the Basque Country UPV/EHU (Spain) in 2018, 
+and a M.Sc. degree at the same university in 2019. 
+In 2023, I obtained a Ph.D. degree at the University of the Basque Country UPV/EHU, Spain, 
+under the supervision of Dr. Roberto Santana and Prof. Jose A. Lozano in the field of adversarial machine learning. 
+Currently, I am an Assistant Professor at UPV/EHU.
+<br>
+<br>
+My current research interests comprise the vulnerabilities and trustworthiness of deep learning models in adversarial scenarios, 
+with particular attention to the implications of adversarial examples in explainable models.
 </p>
 
 
@@ -48,39 +61,55 @@ I received a B.S. degree in Computer Science from the University of the Basque C
 <h2>Publications (<a href="https://scholar.google.com/citations?&user=sViKhEsAAAAJ">Google Scholar</a>)</h2>
 
 <ul>
-	<li><b>Vadillo, J.</b>, Santana, R. and Lozano, J.A. "Extending Adversarial Attacks to Produce Adversarial Class Probability Distributions." <i>Journal of Machine Learning Research, 24(15).</i> pp. 1-42. (2023).
+	<li>Vadillo, J., Santana, R. and Lozano, J.A. <a href="http://doi.org/10.1002/widm.1567"><b>Adversarial Attacks in Explainable Machine Learning: A Survey of Threats Against Models and Humans.</b></a> <i>WIREs Data Mining and Knowledge Discovery, e1567. </i> (2024). DOI: 10.1002/widm.1567.
 	</li>
 	<br>
-	<li><b>Vadillo, J.</b>, Santana, R. and Lozano, J.A. "Analysis of Dominant Classes in Universal Adversarial Perturbations." <i>Knowledge-Based Systems, 236. </i> pp. 107719. Elsevier. (2022). DOI: <a href="https://doi.org/10.1016/j.knosys.2021.107719">10.1016/j.knosys.2021.107719</a>.
+	<li>Vadillo, J., Santana, R. and Lozano, J.A. <a href="https://jmlr.org/papers/v24/21-0326.html"><b>Extending Adversarial Attacks to Produce Adversarial Class Probability Distributions.</b></a> <i>Journal of Machine Learning Research, 24(15).</i> pp. 1-42. (2023). Featured at <b><a href="https://icml.cc/virtual/2024/poster/35632">ICML 2024</a></b>.
 	</li>
 	<br>
-	<li><b>Vadillo, J.</b> and Santana, R. "On the Human Evaluation of Audio Adversarial Examples." <i>Computers & Security, 112.</i> pp. 102495. Elsevier. (2022). DOI: <a href="https://doi.org/10.1016/j.cose.2021.102495">10.1016/j.cose.2021.102495</a>.
+	<li>Vadillo, J., Santana, R., Lozano, J.A., Kwiatkowska, M. <a href="https://arxiv.org/abs/2403.13740"><b>Uncertainty-Aware Explanations Through Probabilistic Self-Explainable Neural Networks.</b></a> arXiv preprint arXiv:2403.13740<i>. </i></a> (2024).
 	</li>
 	<br>
-	<li>Garciarena, U., <b>Vadillo, J.</b>, Mendiburu, A. and Santana, R. "Adversarial Perturbations for Evolutionary Optimization." <i>In Machine Learning, Optimization, and Data Science (LOD). Lecture Notes in Computer Science, 13164. </i> pp. 408-422. Springer, Cham. (2022). DOI: <a href="https://doi.org/10.1007/978-3-030-95470-3_31">10.1007/978-3-030-95470-3_31</a>.
+	<li>Vadillo, J., Santana, R. and Lozano, J.A. <a href="https://doi.org/10.1016/j.knosys.2021.107719"><b>Analysis of Dominant Classes in Universal Adversarial Perturbations.</b></a> <i>Knowledge-Based Systems, 236. </i> pp. 107719. Elsevier. (2022). DOI: 10.1016/j.knosys.2021.107719</a>.
 	</li>
 	<br>
-	<li><b>Vadillo, J.</b>, Santana, R. and Lozano, J.A. "When and How to Fool Explainable Models (and Humans) with Adversarial Examples." <i>arXiv preprint arXiv:2107.01943. </i> (2021).
+	<li>Vadillo, J. and Santana, R. <a href="https://doi.org/10.1016/j.cose.2021.102495"><b>On the Human Evaluation of Audio Adversarial Examples.</b></a> <i>Computers & Security, 112.</i> pp. 102495. Elsevier. (2022). DOI: 10.1016/j.cose.2021.102495.
 	</li>
 	<br>
-	<li><b>Vadillo, J.</b> and Santana, R. "Universal Adversarial Examples in Speech Command Classification." 
+	<li>Garciarena, U., Vadillo, J., Mendiburu, A. and Santana, R. <a href="https://doi.org/10.1007/978-3-030-95470-3_31"><b>Adversarial Perturbations for Evolutionary Optimization.</b></a> <i>In Machine Learning, Optimization, and Data Science (LOD). Lecture Notes in Computer Science, 13164. </i> pp. 408-422. Springer, Cham. (2022). DOI: 10.1007/978-3-030-95470-3_31.
+	</li>
+	<br>
+	<li>Vadillo, J., Santana, R. and Lozano, J.A. <a href=https://arxiv.org/abs/2107.01943><b>When and How to Fool Explainable Models (and Humans) with Adversarial Examples.</b></a> <i>arXiv preprint arXiv:2107.01943. </i> (2021).
+	</li>
+	<br>
+	<li>Vadillo, J. and Santana, R. <a href="https://arxiv.org/abs/1911.10182"><b>Universal Adversarial Examples in Speech Command Classification.</b></a> 
 	<i>In Proceedings of the XIX Conference of the Spanish Association for Artificial Intelligence (CAEPIA).</i> pp. 642-647 (2021). 
 	</li>
 	<br>
-	<li><b>Vadillo, J.</b>, Santana, R. and Lozano, J.A. "Exploring Gaps in DeepFool in Search of More Effective Adversarial Perturbations." <i>In Machine Learning, Optimization, and Data Science (LOD). Lecture Notes in Computer Science, 12566. </i> pp. 215-227. Springer, Cham. (2020). DOI: <a href="https://doi.org/10.1007/978-3-030-64580-9_18">10.1007/978-3-030-64580-9_18</a>.
+	<li>Vadillo, J., Santana, R. and Lozano, J.A. <a href="https://doi.org/10.1007/978-3-030-64580-9_18"><b>Exploring Gaps in DeepFool in Search of More Effective Adversarial Perturbations.</b></a> <i>In Machine Learning, Optimization, and Data Science (LOD). Lecture Notes in Computer Science, 12566. </i> pp. 215-227. Springer, Cham. (2020). DOI: 10.1007/978-3-030-64580-9_18.
 	</li>
 	<br>
-	<li> Villalobos, K., <b>Vadillo, J.</b>, Diez, B., Calvo, B., & Illarramendi, A. "I4TSPS: a Visual-Interactive Web System for Industrial Time-Series Pre-processing." <i> In 2018 IEEE International Conference on Big Data (Big Data).</i> pp. 2012-2018. IEEE. (2018). DOI: <a href="https://doi.org/10.1109/BigData.2018.8621887">10.1109/BigData.2018.8621887</a>.
+	<li> Villalobos, K., Vadillo, J., Diez, B., Calvo, B., & Illarramendi, A. <a href="https://doi.org/10.1109/BigData.2018.8621887"><b>I4TSPS: a Visual-Interactive Web System for Industrial Time-Series Pre-processing.</b></a> <i> In 2018 IEEE International Conference on Big Data (Big Data).</i> pp. 2012-2018. IEEE. (2018). DOI: 10.1109/BigData.2018.8621887.
 	</li>
 </ul>
 
 
-
+<br>
+<hr class="style13">
+<br>
 
 
 <h2>Education</h2>
 
 <ul>
+	<li> PhD - Computer Science	
+		<ul>
+			<li> Title: "Broadening the Horizon of Adversarial Attacks in Deep Learning" </li>
+			<li> Grade: Cum Laude </li>
+			<li> Four-month research stay at the University of Oxford (UK), supervised by Prof. Marta Kwiatkowska </li>
+		</ul>
+	</li>
+	<br>
 	<li> M. Sc. - Computational Engineering and Intelligent Systems	
 			<ul>
 				<li> Average grade: 9.81</li>
@@ -101,8 +130,6 @@ I received a B.S. degree in Computer Science from the University of the Basque C
 
 
 
-
-
 <h2>Other courses</h2>
 
 <ul>
@@ -110,6 +137,10 @@ I received a B.S. degree in Computer Science from the University of the Basque C
 </ul>
 
 
+
+<br>
+<hr class="style13">
+<br>
 
 
 
@@ -139,15 +170,26 @@ I received a B.S. degree in Computer Science from the University of the Basque C
 </ul>
 
 
+<br>
+<hr class="style13">
+<br>
+
+
 <h2>Dissemination</h2>
 
 <ul>
-	<li><b>Vadillo, J.</b>, Santana, R. and Lozano, J.A. <a href="https://sinews.siam.org/Details-Page/do-you-trust-your-speech-recognition-system">Do You Trust Your Speech Recognition System? Fooling Deep Learning with (Inaudible) Audio Perturbations.</a> SIAM News. (2022).
+	<li>Vadillo, J., Santana, R. and Lozano, J.A. <a href="https://sinews.siam.org/Details-Page/do-you-trust-your-speech-recognition-system">Do You Trust Your Speech Recognition System? Fooling Deep Learning with (Inaudible) Audio Perturbations.</a> SIAM News. (2022).
 	</li>
 	<br>
 	<li>Rayne, E. <a href="https://www.syfy.com/syfy-wire/robots-can-be-wrong-ai-is-fooled-by-perturbations">Even Robots Can Be Fooled, but They're Getting Smarter.</a> SYFY Wire. (2022).
 	</li>
 </ul>
+
+
+<br>
+<hr class="style13">
+<br>
+
 
 </div>
 
