Add cv and move imgs to assets/

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         
         <!-- Profile Section (Left) -->
         <div class="profile">
-            <img src="img/profile.jpg" alt="Jon Vadillo">
+            <img src="assets/img/profile.jpg" alt="Jon Vadillo">
             <p><strong>ML Safety Researcher  <br> & Assistant Professor</strong><br>University of the Basque Country <br> (UPV/EHU)</p>
             
             <a class="email-icon" href="mailto:&#x6A;&#x6F;&#x6E;&#x2E;&#x76;&#x61;&#x64;&#x69;&#x6C;&#x6C;&#x6F;&#x40;&#x65;&#x68;&#x75;&#x2E;&#x65;&#x75;&#x73;&#xA;" target="_blank">
@@ -144,7 +144,7 @@
             <a class="github-icon" href="https://github.com/vadel" target="_blank">
                 <i style="font-size:50px" class="fa">&#xf09b;</i>
             </a>
-            <a class="scv-icon" href="https://scholar.google.com/citations?&user=sViKhEsAAAAJ" target="_blank">
+            <a class="scv-icon" href="assets/CV_JonVadillo.pdf" target="_blank">
                 <i class="ai ai-cv ai-3x" ></i>
             </a>
         </div>
