Add cv in contact session too

--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
             <a class="github-icon" href="https://scholar.google.com/citations?&user=sViKhEsAAAAJ" target="_blank">
                 <i style="font-size:50px" class="fa">&#xf09b;</i>
             </a>
-            <a class="scv-icon" href="https://scholar.google.com/citations?&user=sViKhEsAAAAJ" target="_blank">
+            <a class="scv-icon" href="assets/CV_JonVadillo.pdf" target="_blank">
                 <i class="ai ai-cv ai-3x" ></i>
             </a>
         </p>
