--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Ensures responsive design -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <title>Home</title>
@@ -36,11 +37,10 @@
         /* border-bottom: 2px solid #ddd; */
     }
 
-
     /* Full-width Navigation Bar */
     nav {
         background: #306aac;
-        padding: 15px;
+        padding: 18px;  /* Increased padding for better touch usability */
         text-align: center;
         width: 100%;
         position: fixed;
@@ -48,6 +48,7 @@
         left: 0;
         right: 0;
         z-index: 100;
+        font-size: 18px; /* Increased font size for mobile */
     }
 
     nav a {
@@ -65,51 +66,81 @@
     .top-container {
         display: flex;
         align-items: center;
-        margin-top: 80px; /* Adjust for fixed navbar */
+        justify-content: space-between;
+        margin-top: 100px; /* Adjust for fixed navbar */
         padding: 20px;
+        flex-wrap: wrap; /* Enables responsive layout */
     }
 
     /* Profile section on the left */
     .profile {
         text-align: center;
         max-width: 300px;
-        margin-right: 50px;
+        flex: 1;
+        margin-bottom: 20px; /* Adds spacing when stacked in mobile */
     }
 
-    /* Elegant Circular Profile Image */
+    /* Circular Profile Image */
     .profile img {
         width: 150px;
         height: 155px;
         border-radius: 50%; /* Perfect circle */
         border:4px solid #306aac;
-        box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.2); /* Elegant soft shadow */
+        box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.2);
         object-fit: cover;
     }
 
-    /* Google Scholar Icon */
-    .scholar-icon {
-        display: inline-block;
+    /* Social Icons */
+    .profile-icons {
+        display: flex;
+        justify-content: center;
+        gap: 15px; /* Space between icons */
         margin-top: 10px;
     }
 
-    .scholar-icon img {
-        width: 28px; /* Adjust size as needed */
-        height: 28px;
+    .profile-icons a {
+        font-size: 32px;
+        color: #1b4f8a;
         transition: transform 0.2s ease-in-out;
     }
 
-    .scholar-icon img:hover {
-        transform: scale(1.1); /* Slight zoom on hover */
+    .profile-icons a:hover {
+        transform: scale(1.1);
     }
 
     /* About Section on the right */
     .about {
         max-width: 800px;
+        flex: 2;
         font-size: 110%;
+        padding-left: 30px; /* Space from profile section */
     }
 
-    .offset {
-        padding-top: 1px;
+    /* Responsive Design for Mobile */
+    @media (max-width: 768px) {
+        .top-container {
+            flex-direction: column;
+            text-align: center;
+        }
+
+        .about {
+            padding-left: 0;
+            max-width: 100%;
+        }
+
+        nav {
+            font-size: 16px; /* Slightly smaller font for compact layout */
+            padding: 14px; /* Adjusted padding */
+        }
+
+        .profile img {
+            width: 130px;
+            height: 135px;
+        }
+
+        .profile-icons {
+            gap: 10px;
+        }
     }
 
 </style>
@@ -127,26 +158,31 @@
     </nav>
 
     <!-- Top Section: Profile on Left, About Info on Right -->
-    <div id="about" class="top-container section offset">
+    <div id="about" class="top-container section">
         
         <!-- Profile Section (Left) -->
         <div class="profile">
             <img src="assets/img/profile.jpg" alt="Jon Vadillo">
             <p><strong>ML Safety Researcher  <br> & Assistant Professor</strong><br>University of the Basque Country <br> (UPV/EHU)</p>
             
-            <a class="email-icon" href="mailto:&#x6A;&#x6F;&#x6E;&#x2E;&#x76;&#x61;&#x64;&#x69;&#x6C;&#x6C;&#x6F;&#x40;&#x65;&#x68;&#x75;&#x2E;&#x65;&#x75;&#x73;&#xA;" target="_blank">
-                <i style="font-size:48px" class="fa">&#xf0e0;</i>
-            </a>
+            <!-- Icons Row -->
+            <div class="profile-icons">
+                <a href="mailto:jon.vadillo@ehu.eus" target="_blank">
+                    <i class="fa fa-envelope"></i>
+                </a>
 
-            <a class="scholar-icon" href="https://scholar.google.com/citations?&user=sViKhEsAAAAJ" target="_blank">
-                <i class="ai ai-google-scholar ai-3x" ></i>
-            </a>
-            <a class="github-icon" href="https://github.com/vadel" target="_blank">
-                <i style="font-size:50px" class="fa">&#xf09b;</i>
-            </a>
-            <a class="scv-icon" href="assets/CV_JonVadillo.pdf" target="_blank">
-                <i class="ai ai-cv ai-3x" ></i>
-            </a>
+                <a href="https://scholar.google.com/citations?&user=sViKhEsAAAAJ" target="_blank">
+                    <i class="ai ai-google-scholar"></i>
+                </a>
+
+                <a href="https://github.com/vadel" target="_blank">
+                    <i class="fa fa-github"></i>
+                </a>
+
+                <a href="assets/CV_JonVadillo.pdf" target="_blank">
+                    <i class="ai ai-cv"></i>
+                </a>
+            </div>
         </div>
 
         <!-- About Section (Right) -->
@@ -166,12 +202,13 @@
 
     </div>
 
+
     <br>
     <hr class="style13">
     <br>
 
 
-    <div id="publications" class="section offset">
+    <div id="publications" class="section">
         <h2>Publications (<a href="https://scholar.google.com/citations?&user=sViKhEsAAAAJ">Google Scholar</a>)</h2>
 
         <ul>
@@ -235,7 +272,7 @@
 <br>
 
 
-    <div id="education" class="section offset">
+    <div id="education" class="section">
         <h2>Education</h2>
 
         <ul>
@@ -282,7 +319,7 @@
 <br>
 
 
-<div id="awards" class="section offset">
+<div id="awards" class="section">
     <h2>Grants and Awards</h2>
 
     <ul>
