--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
 
     /* Circular Profile Image */
     .profile img {
-        width: 150px;
-        height: 155px;
+        width: 170px;
+        height: 170px;
         border-radius: 50%; /* Perfect circle */
         border:4px solid #306aac;
         box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.2);
@@ -105,25 +105,7 @@
     }
 
     .profile-icons a:hover {
-        transform: scale(1.15);
-    }
-
-    /* Social Icons */
-    .profile-icons-bottom {
-        display: flex;
-        /* justify-content: center; */
-        gap: 10px; /* Space between icons */
-        margin-top: 10px;
-    }
-
-    .profile-icons-bottom a {
-        font-size: 50px;
-        color: #1b4f8a;
-        transition: transform 0.1s ease-in-out;
-    }
-
-    .profile-icons-bottom a:hover {
-        transform: scale(1.15);
+        transform: scale(1.1);
     }
 
     /* About Section on the right */
@@ -180,12 +162,12 @@
         
         <!-- Profile Section (Left) -->
         <div class="profile">
-            <img src="assets/img/profile.jpg" alt="Jon Vadillo">
+            <img src="assets/img/tinyprofile.jpg" alt="Jon Vadillo">
             <p><strong>ML Safety Researcher  <br> & Assistant Professor</strong><br>University of the Basque Country <br> (UPV/EHU)</p>
             
             <!-- Icons Row -->
             <div class="profile-icons">
-                <a href="mailto:&#x6A;&#x6F;&#x6E;&#x2E;&#x76;&#x61;&#x64;&#x69;&#x6C;&#x6C;&#x6F;&#x40;&#x65;&#x68;&#x75;&#x2E;&#x65;&#x75;&#x73;&#xA;" target="_blank">
+                <a href="mailto:jon.vadillo@ehu.eus" target="_blank">
                     <i class="fa fa-envelope"></i>
                 </a>
 
@@ -207,14 +189,23 @@
         <div class="about">
             <h1>Jon Vadillo</h1>
             <p>
-                I received a B.S. degree in Computer Science from the University of the Basque Country UPV/EHU (Spain) in 2018, 
-                and an M.Sc. degree at the same university in 2019. In 2023, I obtained a Ph.D. at the University of the Basque Country, 
-                under the supervision of Dr. Roberto Santana and Prof. Jose A. Lozano, specializing in adversarial machine learning. 
-                Currently, I am an Assistant Professor at UPV/EHU.
+                I am an Assistant Professor at the University of the Basque Country (UPV/EHU), 
+                where I conduct research on adversarial machine learning in the 
+                <a href="http://www.sc.ehu.es/ccwbayes/">Intelligent Systems Group</a>. 
             </p>
             <p>
-                My research focuses on the vulnerabilities and trustworthiness of deep learning models in adversarial scenarios, 
-                with a particular emphasis on the implications of adversarial examples in explainable models.
+                I earned a Ph.D. in Artificial Intelligence in 2023 from UPV/EHU under the supervision of 
+                Dr. <a href="https://scholar.google.es/citations?user=nyI7qw0AAAAJ">Roberto Santana</a> and Prof. 
+                <a href="https://scholar.google.es/citations?user=lhzoWpwAAAAJ&hl=en">Jose A. Lozano</a>, 
+                investigating how adversarial attacks can manipulate deep learning models. 
+                Before that, I obtained an M.Sc. in Computational Engineering and Intelligent Systems
+                and a B.S. in Computer Science from UPV/EHU. I was also a visiting researcher at the 
+                <a href="https://www.ox.ac.uk/">University of Oxford</a> in 2022,
+                under the supervision of Prof. <a href="https://www.cs.ox.ac.uk/people/marta.kwiatkowska/">Marta Kwiatkowska</a>. 
+            </p>
+            <p>
+                My current research focuses on the vulnerabilities and trustworthiness of deep learning models in adversarial scenarios, 
+                with a particular interest in privacy attacks and the implications of adversarial examples in explainable models.
             </p>
         </div>
 
@@ -390,25 +381,21 @@
     <!-- Contact Section -->
     <div id="contact" class="section">
         <h2>Contact</h2>
-        <p> Feel free to contact me for potential collaborations or questions! </p>
+        <p> Feel free to contact me for potential collaborations or question! </p>
         <p>
-            <div class="profile-icons-bottom">
-                <a href="mailto:&#x6A;&#x6F;&#x6E;&#x2E;&#x76;&#x61;&#x64;&#x69;&#x6C;&#x6C;&#x6F;&#x40;&#x65;&#x68;&#x75;&#x2E;&#x65;&#x75;&#x73;&#xA;" target="_blank">
-                    <i class="fa fa-envelope"></i>
-                </a>
+            <a class="email-icon" href="mailto:&#x6A;&#x6F;&#x6E;&#x2E;&#x76;&#x61;&#x64;&#x69;&#x6C;&#x6C;&#x6F;&#x40;&#x65;&#x68;&#x75;&#x2E;&#x65;&#x75;&#x73;&#xA;" target="_blank">
+                <i style="font-size:48px" class="fa">&#xf0e0;</i>
+            </a>
 
-                <a href="https://scholar.google.com/citations?&user=sViKhEsAAAAJ" target="_blank">
-                    <i class="ai ai-google-scholar"></i>
-                </a>
-
-                <a href="https://github.com/vadel" target="_blank">
-                    <i class="fa fa-github"></i>
-                </a>
-
-                <a href="assets/CV_JonVadillo.pdf" target="_blank">
-                    <i class="ai ai-cv"></i>
-                </a>
-            </div>
+            <a class="scholar-icon" href="https://scholar.google.com/citations?&user=sViKhEsAAAAJ" target="_blank">
+                <i class="ai ai-google-scholar ai-3x" ></i>
+            </a>
+            <a class="github-icon" href="https://scholar.google.com/citations?&user=sViKhEsAAAAJ" target="_blank">
+                <i style="font-size:50px" class="fa">&#xf09b;</i>
+            </a>
+            <a class="scv-icon" href="assets/CV_JonVadillo.pdf" target="_blank">
+                <i class="ai ai-cv ai-3x" ></i>
+            </a>
         </p>
 		<br>
 		<br>
