--- a/index.html
+++ b/index.html
@@ -194,12 +194,12 @@
                 <a href="http://www.sc.ehu.es/ccwbayes/">Intelligent Systems Group</a>. 
             </p>
             <p>
-                I earned a Ph.D. in Artificial Intelligence in 2023 from UPV/EHU under the supervision of 
+                I earned a PhD in Artificial Intelligence in 2023 from UPV/EHU under the supervision of 
                 Dr. <a href="https://scholar.google.es/citations?user=nyI7qw0AAAAJ">Roberto Santana</a> and Prof. 
                 <a href="https://scholar.google.es/citations?user=lhzoWpwAAAAJ&hl=en">Jose A. Lozano</a>, 
                 investigating how adversarial attacks can manipulate deep learning models. 
-                Before that, I obtained an M.Sc. in Computational Engineering and Intelligent Systems
-                and a B.S. in Computer Science from UPV/EHU. I was also a visiting researcher at the 
+                Before that, I obtained an MSc in Computational Engineering and Intelligent Systems
+                and a BSc in Computer Science from UPV/EHU. I was also a visiting researcher at the 
                 <a href="https://www.ox.ac.uk/">University of Oxford</a> in 2022,
                 under the supervision of Prof. <a href="https://www.cs.ox.ac.uk/people/marta.kwiatkowska/">Marta Kwiatkowska</a>. 
             </p>
